Updates Vale spelling rule to ignore words with underscores

--- a/ci/vale/styles/Linode/Spelling.yml
+++ b/ci/vale/styles/Linode/Spelling.yml
@@ -2,7 +2,9 @@ extends: spelling
 message: "Did you really mean '%s'?"
 level: error
 filters:
-  # You could make this more specific using something
-  # like `\w+'s`, but this is what is was before.
   - '\W'
+  # Matches any non-word characters.
+  # To target just a possessive form, we could use `\w+'s`
+  - '^.*_.*$'
+  # Matches any word with an underscore
 ignore: ../dictionary.txt
